--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@500;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -16,5 +19,38 @@
             </ul>
         </nav>
     </header>
+    <section id="welcome-section">
+        <h1>Hello, I'm Ion.</h1>
+        <p>A beginner in coding</p>
+    </section>
+    <section id="projects">
+        <h1>Here are a few of the projects I made</h1>
+        <div class="projects">
+        <a href="" class="project-tile">
+            <img src="./ThierryHenry.png" alt="">
+            <p><span></span>Tribute Page<span></span></p>
+        </a>
+        <a href="" class="project-tile">
+            <img src="./RegisntrationForm.png" alt="">
+            <p><span></span>Survey Form<span></span></p>
+        </a>
+        <a href="" class="project-tile">
+            <img src="./TehcnicalDocumentation.png" alt="">
+            <p><span></span><span></span></p>
+        </a>
+        <a href="" class="project-tile">
+            <img src="./LandingPage.png" alt="">
+            <p><span></span><span></span></p>
+        </a>
+        <a href="" class="project-tile">
+            <img src="./skyline.png" alt="">
+            <p><span></span><span></span></p>
+        </a>
+        <a href="" class="project-tile">
+            <img src="./Magazine.png" alt="">
+            <p><span></span><span></span></p>
+        </a>
+    </div>
+    </section>
 </body>
 </html>
