--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@500;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -24,33 +26,36 @@
         <p>A beginner in coding</p>
     </section>
     <section id="projects">
-        <h1>Here are a few of the projects I made</h1>
+        <h1>Here are a few of the projects</h1>
         <div class="projects">
-        <a href="" class="project-tile">
+        <a href="#" class="project-tile">
             <img src="./ThierryHenry.png" alt="">
-            <p><span></span>Tribute Page<span></span></p>
+            <p><span>&lt;</span>Tribute Page<span>/&gt;</span></p>
         </a>
         <a href="" class="project-tile">
-            <img src="./RegisntrationForm.png" alt="">
-            <p><span></span>Survey Form<span></span></p>
+            <img src="./S4.png" alt="">
+            <p><span>&lt;</span>Survey Form<span>/&gt;</span></p>
         </a>
         <a href="" class="project-tile">
             <img src="./TehcnicalDocumentation.png" alt="">
-            <p><span></span><span></span></p>
+            <p><span>&lt;</span>Assembler<span>/&gt;</span></p>
         </a>
         <a href="" class="project-tile">
             <img src="./LandingPage.png" alt="">
-            <p><span></span><span></span></p>
+            <p><span>&lt;</span>Landing Page<span>/&gt;</span></p>
         </a>
         <a href="" class="project-tile">
             <img src="./skyline.png" alt="">
-            <p><span></span><span></span></p>
+            <p><span>&lt;</span>City Skyline<span>/&gt;</span></p>
         </a>
         <a href="" class="project-tile">
             <img src="./Magazine.png" alt="">
-            <p><span></span><span></span></p>
-        </a>
+            <p><span>&lt;</span>Magazine<span>/&gt;</span></p>
+        </a>   
     </div>
+    <a href="" class="show-all">
+        Show All <i class="ri-arrow-right-s-line ri-2x"></i>
+    </a>
     </section>
 </body>
 </html>
