--- a/index.html
+++ b/index.html
@@ -57,5 +57,27 @@
         Show All <i class="ri-arrow-right-s-line ri-2x"></i>
     </a>
     </section>
+    <section id="contact">
+        <h1>Let's work together</h1>
+        <p class="questions">Let me know if you have any questions.</p>
+        <div class="social-media">
+            <a href="" class="social-media">
+                <i class="ri-facebook-circle-fill ri-2x"></i>
+                <p>Facebook</p>
+            </a>
+            <a href="" class="social-media">
+                <i class="ri-github-fill ri-2x"></i>
+                <p>Github</p>
+            </a>
+            <a href="" class="social-media">
+                <i class="ri-fire-fill ri-2x"></i>
+                <p>FreeCodeCamp</p>
+            </a>
+            <a href="" class="social-media">
+                <i class="ri-mail-line ri-2x"></i>
+                <p>Email</p>
+            </a>
+        </div>
+    </section>
 </body>
 </html>
