--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section id="contact">
         <h1>Let's work together</h1>
         <p class="questions">Let me know if you have any questions.</p>
-        <div class="social-media">
+        <div class="social-medias">
             <a href="" class="social-media">
                 <i class="ri-facebook-circle-fill ri-2x"></i>
                 <p>Facebook</p>
@@ -79,5 +79,6 @@
             </a>
         </div>
     </section>
+    <footer>Made by Ion Postolache</footer>
 </body>
 </html>
