--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <nav id="nav-bar">
+        <nav id="navbar">
             <ul class="nav-links">
                 <li><a href="#welcome-section" class="nav-link">Welcome</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
@@ -65,11 +65,13 @@
                 <i class="ri-facebook-circle-fill ri-2x"></i>
                 <p>Facebook</p>
             </a>
-            <a href="" class="social-media">
+            <a href="https://github.com/Covr1G" target="_blank" 
+            class="social-media"
+            id="profile-link">
                 <i class="ri-github-fill ri-2x"></i>
                 <p>Github</p>
             </a>
-            <a href="" class="social-media">
+            <a href="https://www.freecodecamp.org/fcc79f519e1-7552-4445-a3df-19c65a40c432" target="_blank" class="social-media">
                 <i class="ri-fire-fill ri-2x"></i>
                 <p>FreeCodeCamp</p>
             </a>
